# cmakeless

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEATURES.md  INTRODUCTION.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: benchmarks.yml  ci.yml  docs.yml  lint.yml  release.yml  tests.yml
benchmarks/: README.md  bench_presets.py  bench_resolution.py  update_benchmarks_table.py
docs/: ARCHITECTURE.md  FEATURES.md  INTRODUCTION.md  ROADMAP.md  benchmarks.md  cookbook.md  index.md  migration.md  tutorial.md
examples/: README.md
examples/01_hello/: build.py  cmakelessfile.py
examples/01_hello/src/: main.cpp
examples/02_library/: cmakelessfile.py
examples/02_library/include/: greeter.hpp
examples/02_library/src/: main.cpp
examples/02_library/src/engine/: greeter.cpp
examples/02_library/src/engine/internal/: greeter_detail.hpp
examples/03_subprojects/: build.py  cmakelessfile.py
examples/03_subprojects/src/: main.cpp
examples/03_subprojects/tools/asset_packer/: cmakelessfile.py  main.cpp
examples/04_dependencies/: cmakelessfile.py
examples/04_dependencies/src/: main.cpp
examples/05_testing/: cmakelessfile.py
examples/05_testing/include/: greeter.hpp
examples/05_testing/src/engine/: greeter.cpp
examples/05_testing/tests/: greeter_test.cpp
examples/06_ship/: cmakelessfile.py
examples/06_ship/include/: version_banner.hpp
examples/06_ship/src/: main.cpp
examples/06_ship/src/engine/: version_banner.cpp
examples/07_python_module/: build.py  cmakelessfile.py  test_geometry.py
examples/07_python_module/src/: geometry.cpp  mymath.cpp
examples/08_capstone/: README.md  build.py  cmakelessfile.py  test_pystats.py
examples/08_capstone/include/stats/: series.hpp
examples/08_capstone/src/: bindings.cpp  main.cpp  series.cpp
examples/08_capstone/tests/: series_test.cpp
examples/09_build_language/: cmakelessfile.py
examples/09_build_language/assets/: manifest.txt
examples/09_build_language/src/: main.cpp  version.hpp
examples/09_build_language/tools/: cook_assets.py  gen_version.py
examples/10_cmake_interop/: cmakelessfile.py
examples/10_cmake_interop/cmake/: print_build_summary.cmake
examples/10_cmake_interop/src/: main.cpp
examples/11_portability/: cmakelessfile.py
examples/11_portability/src/: main.cpp
examples/12_cmake_globals/: cmakelessfile.py
examples/12_cmake_globals/src/: main.cpp
scripts/: gen_community_pages.py  gen_ref_pages.py
src/cmakeless/: __init__.py  __main__.py  _constants.py  _parallel.py  _version.py  cli.py  errors.py  observer.py
src/cmakeless/api/: __init__.py  _context.py  commands.py  dependencies.py  globals.py  modules.py  options.py  presets.py  project.py  targets.py  toolchains.py  when.py
src/cmakeless/driver/: __init__.py  cmake_driver.py  doctor.py  error_translation.py  file_api.py  generators.py  globals.py  reflection.py
src/cmakeless/emitter/: __init__.py  cmake_emitter.py  presets_emitter.py  sanitizers.py  toolchain_emitter.py  when_emitter.py
src/cmakeless/model/: __init__.py  nodes.py  validate.py
tests/unittests/: conftest.py  test_cli.py  test_cli_verbs.py  test_code_standards.py  test_end_to_end.py  test_end_to_end_deps.py  test_end_to_end_phase4.py  test_parallel.py
tests/unittests/api/: test_add_test.py  test_cmake_globals.py  test_commands.py  test_depends.py  test_install_package.py  test_library.py  test_modules.py  test_observer.py  test_options.py  test_presets.py  test_project.py  test_python_module.py  test_subprojects.py  test_target_vocab.py  test_toolchains.py  test_when.py
tests/unittests/driver/: test_cmake_driver.py  test_doctor.py  test_error_translation.py  test_file_api.py  test_generators.py  test_globals.py  test_reflection.py
tests/unittests/emitter/: test_cmake_emitter.py  test_commands_emitter.py  test_lint_emitter.py  test_modules_emitter.py  test_options_emitter.py  test_pch_unity_emitter.py  test_phase1_emitter.py  test_phase2_emitter.py  test_phase3_emitter.py  test_phase4_emitter.py  test_phase5_emitter.py  test_target_vocab_emitter.py  test_when_emitter.py
tests/unittests/emitter/golden/: cmake_interop.cmake  custom_commands.cmake  dependencies_conan.cmake  dependencies_fallback.cmake  dependencies_vcpkg.cmake  kitchen_sink.cmake  optimize_lto.cmake  options.cmake  pch_unity.cmake  python_module.cmake  raw_cmake.cmake  ship.cmake  ship_presets.json  ship_toolchain.cmake  target_vocab.cmake  tree_child.cmake  tree_parent.cmake
tests/unittests/errors/: test_error_messages.py
tests/unittests/errors/golden/: cmake_error_configure_failure_with_diagnostic.txt  configuration_error_include_path_not_relative.txt  configuration_error_module_no_such_function.txt  dependency_error_missing_lockfile.txt  toolchain_error_cmake_missing.txt
tests/unittests/model/: test_nodes.py  test_validate.py  test_when_model.py
