[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cmakeless"
dynamic = ["version"]
description = "Write C++ builds in Python, get clean CMakeLists.txt: A modern, type-safe alternative to hand-written CMake."
readme = "README.md"
authors = [
    { name = "Bertin Balouki SIMYELI", email = "bbsimyeli@gmail.com" },
]
maintainers = [
    { name = "Bertin Balouki SIMYELI", email = "bbsimyeli@gmail.com" },
]
license = "MPL-2.0"
requires-python = ">=3.12"
dependencies = []
keywords = [
    "cmake",
    "build",
    "c++",
    "cpp",
    "build-system",
    "frontend",
    "cmake-alternative",
    "cmake-generator",
    "meson-alternative",
    "pybind11",
    "nanobind",
    "python-bindings",
    "buildsystem",
    "cross-platform",
    "ninja",
    "ctest",
    "gtest",
    "googletest",
    "catch2",
    "vcpkg",
    "conan",
    "cpp20",
    "cpp23",
    "developer-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Topic :: Software Development :: Build Tools",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/bbalouki/cmakeless"
Repository = "https://github.com/bbalouki/cmakeless"
Documentation = "https://github.com/bbalouki/cmakeless/blob/main/README.md"
Changelog = "https://github.com/bbalouki/cmakeless/blob/main/CHANGELOG.md"
Issues = "https://github.com/bbalouki/cmakeless/issues"

[project.scripts]
cmakeless = "cmakeless.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "mypy>=1.14",
    "ruff>=0.9",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=1.0.6",
    # Pinned to the newest release verified clean on PyPI as of 2026-07-13.
    # mkdocstrings-python>=2.0.3 depends on `griffelib`, a package that
    # replaces the real `griffe` under a new name.
    "mkdocstrings-python==2.0.2",
    # Pinned because griffe>=2.0 stops shipping its own implementation and
    # instead depends on `griffelib` and `griffecli`. 1.15.0 is the newest
    # release verified clean (colorama-only) on PyPI as of 2026-07-13.
    "griffe==1.15.0",
    # Pinned to the newest releases verified clean on PyPI as of 2026-07-13.
    # mkdocs-gen-files>=0.6.1, mkdocs-literate-nav>=0.6.3, and
    # mkdocs-section-index>=0.3.11 all depend on `properdocs`, a package
    # that hijacks the `mkdocs` import namespace via a sys.meta_path hook.
    # Do not lift these three pins without re-auditing the newer releases.
    "mkdocs-gen-files==0.6.0",
    "mkdocs-literate-nav==0.6.2",
    "mkdocs-section-index==0.3.10",
]

[tool.hatch.version]
path = "src/cmakeless/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/cmakeless"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
strict = true
python_version = "3.12"
warn_unreachable = true
pretty = true

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "RUF", # ruff-specific
    "D100", # undocumented public module
    "D101", # undocumented public class
    "D102", # undocumented public method
    "D103", # undocumented public function
    "D104", # undocumented public package
    "D105", # undocumented magic method
    "D106", # undocumented public nested class
    "D107", # undocumented __init__
]
